--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,47 +1,85 @@
-@import url('https://fonts.googleapis.com/css2?family=Radio+Canada&family=Water+Brush&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital@1&family=Radio+Canada&family=Water+Brush&display=swap');
+//variables
+$color-one:gold;
+$color-two:#fff;
+
+$font-family-one:'Radio Canada', sans-serif;
+$font-family-two:'Water Brush', cursive;
+$font-family-three:'Noto Serif', serif;
 *{
     box-sizing: border-box;
 }
 body{
     padding: 0;
     margin: 0;
+    font-family: $font-family-one;
 }
-//variables
-$color-one:gold;
-$color-two:#fff;
-
-$font-family-one:'Radio Canada', sans-serif;
+a{
+    text-decoration: none;
+}
 // NAVIGATION
-.navigation{
+.navigation {
     height: 20vh;
     width: 100%;
-    padding:3vh 10vw;
+    padding: 3vh 10vw;
 }
-.navigation-list{
-    display:flex;
+.navigation-list {
+    display: flex;
     justify-content: space-between;
     width: 50%;
     float: right;
-    li{
+    li {
         display: inline-block;
     }
-    a{
-        text-decoration: none;
+    a {
         font-size: 20px;
-        color:$color-two;
-        font-family: $font-family-one;
+        color: $color-two;
     }
 }
-.logo-link{
+.logo-link {
     color: $color-one;
     text-decoration: none;
     font-size: 40px;
-    font-family: 'Water Brush', cursive;
+    font-family: $font-family-two;
     // font-weight: bold;
 }
 
 //HEADER
 
-header{
-    background-color: gray;
+header {
+    background:url('https://images.pexels.com/photos/3412313/pexels-photo-3412313.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') center/cover no-repeat;
+    height: 100vh;
+    width: 100%;
+    
+}
+.btn-header {
+    background-color: $color-one;
+    display: inline-block;
+    min-width:280px;
+    margin: 24px auto 0 auto;
+    padding: 30px;
+    color: $color-two;
+    font-size: 26px;
+    
+}
+.splash-inner{
+    text-align: center;
+    width: 100%;
+    height: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-20%);
+    h1{
+        font-size: 80px;
+        color: $color-two;
+        margin: 20px;
+    }
+    h2{
+        font-size: 30px;
+        color: $color-two;
+        font-family: $font-family-three;
+        font-weight: 500;
+        margin: 0;
+    }
 }
