--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,6 +17,18 @@ body{
 a{
     text-decoration: none;
 }
+h3{
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    margin:50px auto 20px auto;
+}
+p{
+    text-align: center;
+    font-size: 18px;
+    color: gray;
+    margin: 0;
+}
 // NAVIGATION
 .navigation {
     height: 20vh;
@@ -86,23 +98,12 @@ header {
 // SERVICES
 
 .services{
-    h3{
-        text-align: center;
-        font-size: 40px;
-        font-weight: bold;
-        margin-bottom: 0;
-    }
-    p{
-        text-align: center;
-        font-size: 18px;
-        color: gray;
-        margin-top: 20px;
-        margin-bottom: 30px;
-
-    }
+    min-height: 60vh;
 }
+
 .box{
     text-align: center;
+    margin:50px 20px;
     i{
         border: 4px solid $color-one;
         color: $color-one;
