--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 $color-one:gold;
 $color-two:#fff;
 
+
 $font-family-one:'Radio Canada', sans-serif;
 $font-family-two:'Water Brush', cursive;
 $font-family-three:'Noto Serif', serif;
@@ -21,13 +22,18 @@ h3{
     text-align: center;
     font-size: 50px;
     font-weight: bold;
-    margin:50px auto 20px auto;
+    padding-top:80px;
+    margin: 0;
 }
 p{
     text-align: center;
     font-size: 18px;
     color: gray;
     margin: 0;
+}
+h4{
+    font-size: 25px;
+    text-align: center;
 }
 // NAVIGATION
 .navigation {
@@ -112,6 +118,28 @@ header {
         border-radius: 50%;
     }
 }
-.box-title{
-    font-size: 25px;
+
+
+//PORTFOLIO
+.portfolio{
+    background-color: rgb(245, 243, 243);
+    min-height: 120vh;
+}
+.card{
+    background-color: #fff;
+    margin-top: 50px;
+    img{
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+}
+.card-body{
+    padding:20px 0;
+    p{
+        margin: 0;
+    }
+    h4{
+        margin: 0;
+    }
 }
