--- a/sass/style.scss
+++ b/sass/style.scss
@@ -143,3 +143,33 @@ header {
         margin: 0;
     }
 }
+//footer
+footer{
+    min-height: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    p{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+}
+.footer-list{
+    list-style: none;
+    li{
+        display: inline-block;
+        font-size: 0;
+    }
+    i{
+        font-size: 20px;
+        height: 40px;
+        width: 40px;
+        color: $color-two;
+        background-color: black;
+        border-radius: 50%;
+        padding: 10px;
+        text-align: center;
+    }
+}
